--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,57 @@
       <link rel="stylesheet" href="css/style.css">
       <title>Главная страница</title>
 </head>
+
 <body>
-      
+      <div class="header">
+            <div class="header-logo">
+                  <a href="#" class="header-logo-link"><img src="img/header logo.png" alt="header logo" height="40">
+                  </a>
+                  <p class="header-logo-text">Grow<span>Be</span></p>
+            </div>
+            <ul class="header-menu">
+                  <li class="header-menu-item"><a href="#">Home</a></li>
+                  <li class="header-menu-item"><a href="#">About Us</a></li>
+                  <li class="header-menu-item"><a href="#">Sevices</a></li>
+                  <li class="header-menu-item"><a href="#">Features</a></li>
+                  <li class="header-menu-item"><a href="#">Team</a></li>
+                  <li class="header-menu-item"><a href="#">Blog</a></li>
+                  <li class="header-menu-item"><a href="#">Contact</a></li>
+            </ul>
+      </div>
+      <div class="top-content-wrp">
+            <div class="top-content-info">
+                  <h1 class="top-content-tittle">SEO & Digital Marketing For Your Website.</h1>
+                  <p class="top-content-text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
+                  <div class="btn-top-content-wrp">
+                        <button class="btn-top-content">Start Now</button>
+                        <button class="btn-top-content">Watch Video</button>
+                  </div>
+            </div>
+            <img src="img/top content.png" alt="content image" height="375" class="top-content-image">
+      </div>
+      <div class="top-logos">
+            <ul class="logos-list">
+                  <li class="logos-list-item"><a href="#">
+                        <img src="img/logos1.png" alt="logo" height="50">
+                  </a></li>
+                  <li class="logos-list-item"><a href="#">
+                        <img src="img/logos2.png" alt="logo" height="50">
+                  </a></li>
+                  <li class="logos-list-item"><a href="#">
+                        <img src="img/logos3.png" alt="logo" height="50">
+                  </a></li>
+                  <li class="logos-list-item"><a href="#">
+                        <img src="img/logos4.png" alt="logo" height="50">
+                  </a></li>
+                  <li class="logos-list-item"><a href="#">
+                        <img src="img/logos5.png" alt="logo" height="50">
+                  </a></li>
+                  <li class="logos-list-item"><a href="#">
+                        <img src="img/logos6.png " alt="logo" height="50">
+                  </a></li>
+            </ul>
+      </div>
 </body>
+
 </html>
