--- a/index.html
+++ b/index.html
@@ -5,40 +5,42 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
       <link rel="stylesheet" href="css/style.css">
       <title>Главная страница</title>
 </head>
 
 <body>
-      <div class="header">
+      <div class="header center">
             <div class="header-logo">
-                  <a href="#" class="header-logo-link"><img src="img/header logo.png" alt="header logo" height="40">
+                  <a href="#" class="header-logo-link">
+                        <img src="img/header logo.png" alt="header logo" height="40">
+                        <p class="header-logo-text">Grow<span class="another-color" >Be</span></p>
                   </a>
-                  <p class="header-logo-text">Grow<span>Be</span></p>
             </div>
             <ul class="header-menu">
-                  <li class="header-menu-item"><a href="#">Home</a></li>
-                  <li class="header-menu-item"><a href="#">About Us</a></li>
-                  <li class="header-menu-item"><a href="#">Sevices</a></li>
-                  <li class="header-menu-item"><a href="#">Features</a></li>
-                  <li class="header-menu-item"><a href="#">Team</a></li>
-                  <li class="header-menu-item"><a href="#">Blog</a></li>
-                  <li class="header-menu-item"><a href="#">Contact</a></li>
+                  <li class=""><a class="header-menu-item another-color" href="#">Home</a></li>
+                  <li><a class="header-menu-item" href="#">About Us</a></li>
+                  <li><a class="header-menu-item" href="#">Sevices</a></li>
+                  <li><a class="header-menu-item" href="#">Features</a></li>
+                  <li><a class="header-menu-item" href="#">Team</a></li>
+                  <li><a class="header-menu-item" href="#">Blog</a></li>
+                  <li><a class="header-menu-item" href="#">Contact</a></li>
             </ul>
       </div>
-      <div class="top-content-wrp">
+      <div class="top-content-wrp center">
             <div class="top-content-info">
                   <h1 class="top-content-tittle">SEO & Digital Marketing For Your Website.</h1>
                   <p class="top-content-text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
                   <div class="btn-top-content-wrp">
-                        <button class="btn-top-content">Start Now</button>
-                        <button class="btn-top-content">Watch Video</button>
+                        <button class="btn-top-content"><a href="#">Start Now</a></button>
+                        <a href="#" class="btn-top-link">Watch Video</a>
                   </div>
             </div>
             <img src="img/top content.png" alt="content image" height="375" class="top-content-image">
       </div>
       <div class="top-logos">
-            <ul class="logos-list">
+            <ul class="logos-list center">
                   <li class="logos-list-item"><a href="#">
                         <img src="img/logos1.png" alt="logo" height="50">
                   </a></li>
