--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
+      <link rel="stylesheet"
+            href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
       <link rel="stylesheet" href="css/style.css">
       <title>Главная страница</title>
 </head>
@@ -15,7 +16,7 @@
             <div class="header-logo">
                   <a href="#" class="header-logo-link">
                         <img src="img/header logo.png" alt="header logo" height="40">
-                        <p class="header-logo-text">Grow<span class="another-color" >Be</span></p>
+                        <p class="header-logo-text">Grow<span class="another-color">Be</span></p>
                   </a>
             </div>
             <ul class="header-menu">
@@ -31,9 +32,10 @@
       <div class="top-content-wrp center">
             <div class="top-content-info">
                   <h1 class="top-content-tittle">SEO & Digital Marketing For Your Website.</h1>
-                  <p class="top-content-text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
+                  <p class="top-content-text">Provide all kind of seo services and help to improve seo ranking. Globally
+                        incubate standards.</p>
                   <div class="btn-top-content-wrp">
-                        <button class="btn-top-content"><a href="#">Start Now</a></button>
+                        <button class="btn-top-content">Start Now</button>
                         <a href="#" class="btn-top-link">Watch Video</a>
                   </div>
             </div>
@@ -42,23 +44,45 @@
       <div class="top-logos">
             <ul class="logos-list center">
                   <li class="logos-list-item"><a href="#">
-                        <img src="img/logos1.png" alt="logo" height="50">
-                  </a></li>
+                              <img src="img/logos1.png" alt="logo" height="50">
+                        </a></li>
                   <li class="logos-list-item"><a href="#">
-                        <img src="img/logos2.png" alt="logo" height="50">
-                  </a></li>
+                              <img src="img/logos2.png" alt="logo" height="50">
+                        </a></li>
                   <li class="logos-list-item"><a href="#">
-                        <img src="img/logos3.png" alt="logo" height="50">
-                  </a></li>
+                              <img src="img/logos3.png" alt="logo" height="50">
+                        </a></li>
                   <li class="logos-list-item"><a href="#">
-                        <img src="img/logos4.png" alt="logo" height="50">
-                  </a></li>
+                              <img src="img/logos4.png" alt="logo" height="50">
+                        </a></li>
                   <li class="logos-list-item"><a href="#">
-                        <img src="img/logos5.png" alt="logo" height="50">
-                  </a></li>
+                              <img src="img/logos5.png" alt="logo" height="50">
+                        </a></li>
                   <li class="logos-list-item"><a href="#">
-                        <img src="img/logos6.png " alt="logo" height="50">
-                  </a></li>
+                              <img src="img/logos6.png " alt="logo" height="50">
+                        </a></li>
+            </ul>
+      </div>
+      <div class="features">
+            <ul class="features-list">
+                  <li class="features-list-item">
+                              <div class="ftr-list-item-photo"></div>
+                              <h3 class="ftr-list-item-tittle">Grow Your Business</h3>
+                              <p class="ftr-list-item-txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                              <a href="#" class="ftr-list-item-link">Read More...</a>
+                  </li>
+                  <li class="features-list-item ftr-list-item-big">
+                              <div class="ftr-list-item-photo"></div>
+                              <h3 class="ftr-list-item-tittle">Get Quality Ieads</h3>
+                              <p class="ftr-list-item-txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                              <a href="#" class="ftr-list-item-link">Read More...</a>
+                  </li>
+                  <li class="features-list-item">
+                              <div class="ftr-list-item-photo"></div>
+                              <h3 class="ftr-list-item-tittle">Drive More Sales</h3>
+                              <p class="ftr-list-item-txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                              <a href="#" class="ftr-list-item-link">Read More...</a>
+                  </li>
             </ul>
       </div>
 </body>
