add servoces seminar5 done

--- a/index.html
+++ b/index.html
@@ -66,22 +66,49 @@
       <div class="features">
             <ul class="features-list">
                   <li class="features-list-item">
-                              <div class="ftr-list-item-photo"></div>
-                              <h3 class="ftr-list-item-tittle">Grow Your Business</h3>
-                              <p class="ftr-list-item-txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
-                              <a href="#" class="ftr-list-item-link">Read More...</a>
+                        <div class="ftr-list-item-photo"></div>
+                        <h3 class="ftr-list-item-tittle">Grow Your Business</h3>
+                        <p class="ftr-list-item-txt">Leverage agile frameworks to provide a robust synopsis for high
+                              level overviews.</p>
+                        <a href="#" class="ftr-list-item-link">Read More...</a>
                   </li>
                   <li class="features-list-item ftr-list-item-big">
-                              <div class="ftr-list-item-photo"></div>
-                              <h3 class="ftr-list-item-tittle">Get Quality Ieads</h3>
-                              <p class="ftr-list-item-txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
-                              <a href="#" class="ftr-list-item-link">Read More...</a>
+                        <div class="ftr-list-item-photo"></div>
+                        <h3 class="ftr-list-item-tittle">Get Quality Ieads</h3>
+                        <p class="ftr-list-item-txt">Leverage agile frameworks to provide a robust synopsis for high
+                              level overviews.</p>
+                        <a href="#" class="ftr-list-item-link">Read More...</a>
                   </li>
                   <li class="features-list-item">
-                              <div class="ftr-list-item-photo"></div>
-                              <h3 class="ftr-list-item-tittle">Drive More Sales</h3>
-                              <p class="ftr-list-item-txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
-                              <a href="#" class="ftr-list-item-link">Read More...</a>
+                        <div class="ftr-list-item-photo"></div>
+                        <h3 class="ftr-list-item-tittle">Drive More Sales</h3>
+                        <p class="ftr-list-item-txt">Leverage agile frameworks to provide a robust synopsis for high
+                              level overviews.</p>
+                        <a href="#" class="ftr-list-item-link">Read More...</a>
+                  </li>
+            </ul>
+      </div>
+      <div class="services">
+            <h1 class="services-tittle">Why You Should Choose Us.</h1>
+            <p class="services-txt">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.</p>
+            <ul class="services-list">
+                  <li class="services-list-item">
+                        <div class="services-item-photo serv-img1"></div>
+                        <h3 class="sreveices-list-item-tittle">Keyword Research</h3>
+                        <p class="srevices-list-item-txt">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                        <button class="services-list-item-btn">Learn More ></button>
+                  </li>
+                  <li class="services-list-item card-center">
+                        <div class="services-item-photo serv-img2"></div>
+                        <h3 class="sreveices-list-item-tittle">Seo Optimazadion</h3>
+                        <p class="srevices-list-item-txt">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                        <button class="services-list-item-btn">Learn More ></button>
+                  </li>
+                  <li class="services-list-item">
+                        <div class="services-item-photo serv-img3"></div>
+                        <h3 class="sreveices-list-item-tittle">Social Marketing</h3>
+                        <p class="srevices-list-item-txt">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                        <button class="services-list-item-btn">Learn More ></button>
                   </li>
             </ul>
       </div>
